--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -183,9 +183,9 @@
 <% if user_signed_in? %>
 <div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <a href="/items/new">
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
+  <%= link_to image_tag('camera.png', size: '185x50', class:'purchase-btn-icon'), new_item_path %>
 </div>
 <% end %>
 <%= render "shared/footer" %>
+
+
