--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,9 +33,10 @@
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% elsif user_signed_in? && @order == nil %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+    <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
     <% else %>
+    <%= link_to '購入画面に進む', root_path ,class:"item-red-btn"%>
     <% end %>
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
