--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,6 +31,7 @@
     <p class='or-text'>or</p>
     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
 
+    <% elsif @order != nil %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% elsif user_signed_in? && @order == nil %>
     <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn"%>
