--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,7 +33,7 @@
     <% elsif user_signed_in? && @order == nil %>
     <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn"%>
     <% else %>
-    <%= link_to '購入画面に進む', root_path ,class:"item-red-btn"%>
+    <%= link_to '購入画面に進む', new_user_session_path ,class:"item-red-btn"%>
     <% end %>
 
     <div class="item-explain-box">
