--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -187,6 +187,11 @@
   <span class='purchase-btn-text'>出品する</span>
   <%= link_to image_tag('camera.png', size: '185x50', class:'purchase-btn-icon'), new_item_path %>
 </div>
+<% else %>
+<div class='purchase-btn'>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= link_to image_tag('camera.png', size: '185x50', class:'purchase-btn-icon'), new_user_session_path %>
+</div>
 <% end %>
 <%= render "shared/footer" %>
 
